; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_via82xx.c_clean_via_table.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_via82xx.c_clean_via_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.viadev = type { i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }
%struct.snd_pcm_substream = type { i32 }
%struct.pci_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.viadev*, %struct.snd_pcm_substream*, %struct.pci_dev*)* @clean_via_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clean_via_table(%struct.viadev* %0, %struct.snd_pcm_substream* %1, %struct.pci_dev* %2) #0 {
  %4 = alloca %struct.viadev*, align 8
  %5 = alloca %struct.snd_pcm_substream*, align 8
  %6 = alloca %struct.pci_dev*, align 8
  store %struct.viadev* %0, %struct.viadev** %4, align 8
  store %struct.snd_pcm_substream* %1, %struct.snd_pcm_substream** %5, align 8
  store %struct.pci_dev* %2, %struct.pci_dev** %6, align 8
  %7 = load %struct.viadev*, %struct.viadev** %4, align 8
  %8 = getelementptr inbounds %struct.viadev, %struct.viadev* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %19

12:                                               ; preds = %3
  %13 = load %struct.viadev*, %struct.viadev** %4, align 8
  %14 = getelementptr inbounds %struct.viadev, %struct.viadev* %13, i32 0, i32 1
  %15 = call i32 @snd_dma_free_pages(%struct.TYPE_2__* %14)
  %16 = load %struct.viadev*, %struct.viadev** %4, align 8
  %17 = getelementptr inbounds %struct.viadev, %struct.viadev* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32* null, i32** %18, align 8
  br label %19

19:                                               ; preds = %12, %3
  %20 = load %struct.viadev*, %struct.viadev** %4, align 8
  %21 = getelementptr inbounds %struct.viadev, %struct.viadev* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @kfree(i32* %22)
  %24 = load %struct.viadev*, %struct.viadev** %4, align 8
  %25 = getelementptr inbounds %struct.viadev, %struct.viadev* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  ret i32 0
}

declare dso_local i32 @snd_dma_free_pages(%struct.TYPE_2__*) #1

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
